--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <!-- ヒーローセクション -->
     <section id="home" class="relative h-screen w-full flex items-center justify-center overflow-hidden">
         <!-- アップロード画像を使用したスライドショー -->
-        <div id="slide1" class="hero-slide active" style="background-image: url(Screenshot 2026-01-30 10.37.42.png);"></div> <!-- 東京の夜景 -->
-        <div id="slide2" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1509023467864-1ecbb3f635c6?q=80&w=2000');"></div> <!-- 逆さ富士 -->
-        <div id="slide3" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1536098561742-ca998e48cbcc?q=80&w=2000');"></div> <!-- 東京タワー -->
+        <div id="slide1" class="hero-slide active" style="background-image: url(Screenshot 2026-01-30 10.37.42.png);"></div> 
+        <div id="slide2" class="hero-slide" style="background-image: url(Screenshot 2026-01-30 10.38.49.png);"></div> 
+        <div id="slide3" class="hero-slide" style="background-image: url(https://github.com/yykk8/school-trip-2025/blob/main/Screenshot%202026-01-30%2010.39.49.png');"></div> <!-- 東京タワー -->
         <div id="slide4" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1431207908269-0014022c39e9?q=80&w=2000');"></div> <!-- 忍野八海/自然 -->
         
         <div class="relative z-10 text-center text-white px-4">
