--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Trip Notes ― 自分たちで作る世界一の修学旅行 ―">
     <meta property="og:description" content="修学旅行を楽しいだけで終わらせない、修学旅行の記録・思い出共有サイト">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1540959733332-e94e270b4052?q=80&w=2000">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1513407030348-c983a97b98d8?q=80&w=2000">
     
     <title>Trip Notes ― 自分たちで作る世界一の修学旅行 ―</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -100,10 +100,10 @@
     <!-- ヒーローセクション -->
     <section id="home" class="relative h-screen w-full flex items-center justify-center overflow-hidden">
         <!-- アップロード画像を使用したスライドショー -->
-        <div id="slide1" class="hero-slide active" style="background-image: url(Screenshot 2026-01-30 10.37.42.png);"></div> 
-        <div id="slide2" class="hero-slide" style="background-image: url(Screenshot 2026-01-30 10.38.49.png);"></div> 
-        <div id="slide3" class="hero-slide" style="background-image: url(https://github.com/yykk8/school-trip-2025/blob/main/Screenshot%202026-01-30%2010.39.49.png');"></div> <!-- 東京タワー -->
-        <div id="slide4" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1431207908269-0014022c39e9?q=80&w=2000');"></div> <!-- 忍野八海/自然 -->
+        <div id="slide1" class="hero-slide active" style="background-image: url('https://images.unsplash.com/photo-1513407030348-c983a97b98d8?q=80&w=2000');"></div> <!-- 東京タワー夜景 -->
+        <div id="slide2" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1528164344705-47542687000d?q=80&w=2000');"></div> <!-- 富士山 -->
+        <div id="slide3" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1536098561742-ca998e48cbcc?q=80&w=2000');"></div> <!-- 浅草 -->
+        <div id="slide4" class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1526481280693-3bfa7568e0f3?q=80&w=2000');"></div> <!-- 忍野八海/日本の自然/水辺 -->
         
         <div class="relative z-10 text-center text-white px-4">
             <p class="text-lg md:text-xl mb-4 tracking-widest fade-in">2024.11 TOKYO & YAMANASHI</p>
@@ -240,7 +240,7 @@
 
             <div id="galleryGrid" class="grid grid-cols-2 md:grid-cols-4 gap-2 md:gap-4">
                 <div class="gallery-item aspect-square bg-slate-100 rounded-lg overflow-hidden" data-category="scenery">
-                    <img src="https://images.unsplash.com/photo-1431207908269-0014022c39e9?q=80&w=800" class="w-full h-full object-cover hover:scale-105 transition">
+                    <img src="https://images.unsplash.com/photo-1526481280693-3bfa7568e0f3?q=80&w=800" class="w-full h-full object-cover hover:scale-105 transition">
                 </div>
                 <div class="gallery-item aspect-square bg-slate-100 rounded-lg overflow-hidden" data-category="scenery">
                     <img src="https://images.unsplash.com/photo-1509023467864-1ecbb3f635c6?q=80&w=800" class="w-full h-full object-cover hover:scale-105 transition">
